...
                ) {
                    Button(
                        onClick = {
                            onEvent(TaskEvent.SaveTask)
                        }
                    ) {
                        Text(text = "Save")
                    }
                }
            }
        }
    )
}
...
